64bits: Reorder functions inside section .text in order to jump at the right entry point
Signed-off-by: Raphael Gault <gault_r@epita.fr>

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -2,6 +2,7 @@ CC=gcc
 LD=ld
 CFLAGS = -ffreestanding \
 				-fno-stack-protector \
+				-ffunction-sections \
 				-Wall \
 				-Werror \
 				-O0 \
