64bits: Add extra object to 64bit kernel and call win function
Signed-off-by: Raphael Gault <gault_r@epita.fr>

--- a/kernel64/Makefile
+++ b/kernel64/Makefile
@@ -19,11 +19,10 @@ KOBJS=kernel64.o \
 			printf.o \
 			puts.o
 
-
 all: ${ELF}.bin
 
 ${ELF}: $(KOBJS)
-	$(LD) $(LDFLAGS) $^ -o $@
+	$(LD) $(LDFLAGS) $^ ${EXTRA_OBJECT} -o $@
 
 ${ELF}.bin: ${ELF}
 	objcopy -O binary $< $@
